fix: Reduced all font sizes and spacing

--- a/src/app/pages/about/about.component.sass
+++ b/src/app/pages/about/about.component.sass
@@ -7,4 +7,4 @@
     letter-spacing: 0.03rem
     line-height: 1.6rem
     p
-        margin-bottom: 0.4rem
+        font-size: 0.9rem
