--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -2,15 +2,15 @@
 
 .main-menu-holder
     position: absolute
-    top: 5rem
+    top: 7rem
     left: 1.6rem
     flex-direction: column
     align-items: flex-start
     display: flex
     a
         text-align: left
-        padding: 0.3rem 0 0.3rem
-        font-size: 2.8rem
+        padding: 0 0 0.3rem
+        font-size: 2.4rem
         font-family: $title-font
         font-weight: 500
 
@@ -23,7 +23,7 @@
     display: flex
     a
         text-align: left
-        padding: 0.3rem 0 0.3rem
-        font-size: 2.2rem
+        padding: 0 0 0.2rem
+        font-size: 1.5rem
         font-family: $title-font
         font-weight: 500
