--- a/src/app/shared/sidebar/sidebar.component.sass
+++ b/src/app/shared/sidebar/sidebar.component.sass
@@ -15,8 +15,8 @@
     display: flex
     a
         text-align: left
-        padding: 0.3rem 0 0.3rem
-        font-size: 2.4rem
+        padding: 0 0 0.2rem
+        font-size: 2rem
         color: $bg-white
         font-family: $title-font
         font-weight: 500
@@ -30,7 +30,7 @@
     a
         text-align: left
         color: $bg-white
-        padding: 0.3rem 0 0.3rem
+        padding: 0 0 0.2rem
         font-size: 1.4rem
         font-family: $title-font
         font-weight: 500
